--- a/index.html
+++ b/index.html
@@ -6,38 +6,28 @@
 <title>BED HOSPITALITY — Self Assessment Clean Baseline</title>
 <style>
   * { box-sizing: border-box; }
-  body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#111; margin:0; }
+  body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#434343; margin:0; }
   .container { width:100%; margin:0; padding:24px 20px; }
 
-  h1 { font-size:20pt; margin:0 0 8px 0; line-height:1.2; }
-  .subheader { font-size:18pt; margin:0 0 20px 0; font-weight:500; }
-  h2 { font-size:14pt; margin:22px 0 10px 0; line-height:1.25; }
+  h1 { font-size:22pt; margin:0 0 8px 0; line-height:1.2; color:#434343; }
+  .subheader { font-size:18pt; margin:0 0 20px 0; font-weight:700; color:#434343; }
+  h2 { font-size:14pt; margin:22px 0 10px 0; line-height:1.25; color:#434343; }
+  h2::after { content:""; display:block; height:12px; } /* blank line after page headers */
 
-  .row {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-  }
-  .row > label {
-    width: 120px;
-    font-size: 10pt;
-    font-weight: 400;
-  }
+  .row { display:flex; align-items:center; margin:10px 0; }
+  .row > label { width:120px; font-size:10pt; font-weight:400; color:#434343; }
   .row > input,
   .row > select {
-    width: 260px;   /* fixed width for all fields */
-    max-width: 100%;
-    padding: 8px 10px;
-    font-size: 10pt;
+    width:260px; max-width:100%; padding:8px 10px; font-size:10pt; color:#434343;
   }
   select:invalid { color:#aaa; }
 
-  .q-item { padding:12px 0; border-top:1px solid #ddd; }
+  .q-item { padding:12px 0; border-top:1px solid #ddd; color:#434343; }
   .pill { display:inline-block; width:32px; height:32px; line-height:32px; text-align:center;
-          border:1px solid #ccc; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; }
+          border:1px solid #ccc; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; color:#434343; }
   .pill.selected { background:#1E90FF; color:#fff; }
 
-  button { padding:10px 14px; border:1px solid #ccc; border-radius:10px; background:#fff; cursor:pointer; }
+  button { padding:10px 14px; border:1px solid #ccc; border-radius:10px; background:#fff; cursor:pointer; color:#434343; }
 </style>
 <script id="embeddedQuestions" type="application/json">[
   {
