--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     --label-w: 118px;
     --gap: 6px;
     --brand-blue: #1E90FF;
+    --progress-red: #E11D48; /* red dots */
   }
   * { box-sizing: border-box; }
   body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#111; margin:0; }
@@ -21,9 +22,7 @@
   h2 { font-size:14pt; margin:22px 0 8px 0; line-height:1.25; }
 
   /* Intro paragraphs */
-  .intro { margin:4px 0 14px 0; font-size:10.5pt; color:#333; }
-  h2 + .intro { margin-top:4px; }
-  .intro + .row { margin-top:14px; }
+  .intro { margin:4px 0 14px 0; font-size:10pt; color:#333; }
 
   /* Grid rows */
   .row {
@@ -42,17 +41,20 @@
     border: 1px solid #cfd4dc;
     border-radius: 10px;
     background: #fff;
+    transition: box-shadow .15s, border-color .15s, background-color .15s;
   }
+  /* Blue accent identical for input and select (background glow + subtle border) */
   .row > input:focus,
   .row > select:focus {
     outline: none;
-    border-color: var(--brand-blue);
+    border-color: rgba(30,144,255,0.8);
     box-shadow: 0 0 0 3px rgba(30,144,255,0.18);
+    background-color: rgba(30,144,255,0.04);
   }
   select:invalid { color:#aaa; }
 
   /* Buttons */
-  .actions { padding-left: calc(var(--label-w) + var(--gap)); margin-top: 14px; }
+  .actions { padding-left: calc(var(--label-w) + var(--gap)); margin-top: 14px; text-align: right; }
   button {
     padding: 12px 18px;
     border: none;
@@ -62,6 +64,14 @@
     font-size: 12pt;
     cursor: pointer;
   }
+
+  /* Progress dots */
+  .progress { display:flex; gap:10px; margin:10px 0 14px 0; }
+  .dot {
+    width:10px; height:10px; border-radius:50%;
+    background:#f3f4f6; border:1px solid #e5e7eb;
+  }
+  .dot.active { background: var(--progress-red); border-color: var(--progress-red); }
 
   .q-item { padding:12px 0; border-top:1px solid #ddd; }
   .pill { display:inline-block; width:32px; height:32px; line-height:32px;
@@ -275,7 +285,7 @@
       </div>
 
       <h2>Peer Information</h2>
-      <p class="intro">This part is for the peer reviewer to fill out.</p>
+      <p class="intro">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
       <div class="row"><label for="peerName">name peer</label><input id="peerName"></div>
       <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"></div>
       <div class="row"><label for="peerHotel">peer location</label>
@@ -297,6 +307,9 @@
 
     <div id="q1" style="display:none">
       <h2>Statements Part 1</h2>
+      <div class="progress" id="progressQ1">
+        <span class="dot active"></span><span class="dot active"></span><span class="dot"></span><span class="dot"></span>
+      </div>
       <div id="list-q1"></div>
       <div class="actions">
         <button id="toQ2">Next</button>
@@ -305,6 +318,9 @@
 
     <div id="q2" style="display:none">
       <h2>Statements Part 2</h2>
+      <div class="progress" id="progressQ2">
+        <span class="dot active"></span><span class="dot active"></span><span class="dot active"></span><span class="dot active"></span>
+      </div>
       <div id="list-q2"></div>
       <div class="actions">
         <button id="finish">Finish</button>
@@ -314,7 +330,7 @@
 
 <script>
 (function(){
-  const S = {answers:{}, questions:[]};
+  const S = { answers:{}, questions:[] };
   try { S.questions = JSON.parse(document.getElementById('embeddedQuestions').textContent) || []; }
   catch(e) { S.questions = []; }
   const $ = id => document.getElementById(id);
@@ -344,6 +360,7 @@
     S.questions.slice(0,18).forEach((q,i) => l.appendChild(makeQ(q, i+1)));
     document.getElementById('welcome').style.display = 'none';
     document.getElementById('q1').style.display = 'block';
+    window.scrollTo({top:0, behavior:'smooth'});
   };
 
   $('toQ2').onclick = () => {
@@ -351,6 +368,7 @@
     S.questions.slice(18,35).forEach((q,i) => l.appendChild(makeQ(q, 19+i)));
     document.getElementById('q1').style.display = 'none';
     document.getElementById('q2').style.display = 'block';
+    window.scrollTo({top:0, behavior:'smooth'});
   };
 
   $('finish').onclick = () => { alert('Done'); };
