--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     --label-w: 118px;
     --gap: 6px;
     --brand-blue: #1E90FF;
-    --progress-red: #E11D48; /* red dots */
+    --progress-red: #E11D48;
   }
   * { box-sizing: border-box; }
   body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#111; margin:0; }
@@ -18,13 +18,15 @@
 
   /* Headers */
   h1 { font-size:20pt; margin:0 0 8px 0; line-height:1.2; }
-  .subheader { font-size:18pt; margin:0 0 20px 0; font-weight:500; }
+  .subheader { font-size:18pt; margin:0 0 12px 0; font-weight:500; }
   h2 { font-size:14pt; margin:22px 0 8px 0; line-height:1.25; }
 
-  /* Intro paragraphs */
-  .intro { margin:4px 0 14px 0; font-size:10pt; color:#333; }
+  /* Progress dots (now on every page) */
+  .progress { display:flex; gap:10px; margin:6px 0 16px 0; }
+  .dot { width:10px; height:10px; border-radius:50%; background:#f3f4f6; border:1px solid #e5e7eb; }
+  .dot.active { background: var(--progress-red); border-color: var(--progress-red); }
 
-  /* Grid rows */
+  /* Form rows use Grid so fields reach right edge (20px page padding) */
   .row {
     display: grid;
     grid-template-columns: var(--label-w) 1fr;
@@ -38,18 +40,18 @@
     width: 100%;
     padding: 10px 12px;
     font-size: 10pt;
-    border: 1px solid #cfd4dc;
+    border: 1px solid #cfd4dc;   /* neutral border */
     border-radius: 10px;
     background: #fff;
     transition: box-shadow .15s, border-color .15s, background-color .15s;
   }
-  /* Blue accent identical for input and select (background glow + subtle border) */
+  /* Remove blue border/glow on focus per request */
   .row > input:focus,
   .row > select:focus {
     outline: none;
-    border-color: rgba(30,144,255,0.8);
-    box-shadow: 0 0 0 3px rgba(30,144,255,0.18);
-    background-color: rgba(30,144,255,0.04);
+    border-color: #cfd4dc;
+    box-shadow: none;
+    background-color: #fff;
   }
   select:invalid { color:#aaa; }
 
@@ -65,20 +67,13 @@
     cursor: pointer;
   }
 
-  /* Progress dots */
-  .progress { display:flex; gap:10px; margin:10px 0 14px 0; }
-  .dot {
-    width:10px; height:10px; border-radius:50%;
-    background:#f3f4f6; border:1px solid #e5e7eb;
-  }
-  .dot.active { background: var(--progress-red); border-color: var(--progress-red); }
-
   .q-item { padding:12px 0; border-top:1px solid #ddd; }
   .pill { display:inline-block; width:32px; height:32px; line-height:32px;
           text-align:center; border:1px solid #ccc; border-radius:50%;
           margin-right:6px; cursor:pointer; user-select:none; }
   .pill.selected { background: var(--brand-blue); color:#fff; }
 
+  /* Mobile fallback: stack label above field below 340px */
   @media (max-width: 340px) {
     .row { grid-template-columns: 1fr; row-gap: 6px; }
     .actions { padding-left: 0; }
@@ -266,10 +261,13 @@
   <main class="container">
     <h1>BED HOSPITALITY 2.0</h1>
     <p class="subheader">TEAM MEMBER FORM</p>
+    <div class="progress" id="progressP1">
+      <span class="dot active"></span><span class="dot active"></span><span class="dot active"></span><span class="dot active"></span>
+    </div>
 
     <div id="welcome">
       <h2>Your Information</h2>
-      <p class="intro">This part is for the team member to fill out.</p>
+      <!-- Removed intro text under Your Information -->
       <div class="row"><label for="nick">your name</label><input id="nick"></div>
       <div class="row"><label for="email">your email</label><input id="email" type="email"></div>
       <div class="row"><label for="hotel">your location</label>
@@ -285,7 +283,7 @@
       </div>
 
       <h2>Peer Information</h2>
-      <p class="intro">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
+      <p class="intro" style="font-size:10pt;">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
       <div class="row"><label for="peerName">name peer</label><input id="peerName"></div>
       <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"></div>
       <div class="row"><label for="peerHotel">peer location</label>
@@ -308,7 +306,7 @@
     <div id="q1" style="display:none">
       <h2>Statements Part 1</h2>
       <div class="progress" id="progressQ1">
-        <span class="dot active"></span><span class="dot active"></span><span class="dot"></span><span class="dot"></span>
+        <span class="dot active"></span><span class="dot active"></span><span class="dot active"></span><span class="dot active"></span>
       </div>
       <div id="list-q1"></div>
       <div class="actions">
@@ -330,7 +328,7 @@
 
 <script>
 (function(){
-  const S = { answers:{}, questions:[] };
+  const S = {answers:{}, questions:[]};
   try { S.questions = JSON.parse(document.getElementById('embeddedQuestions').textContent) || []; }
   catch(e) { S.questions = []; }
   const $ = id => document.getElementById(id);
