--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>BED HOSPITALITY — Self Assessment Clean Baseline</title>
 <style>
+  /* ===== baseline layout (keep) ===== */
   :root {
     --pad: 20px;
     --label-w: 118px;
@@ -12,21 +13,22 @@
     --brand-blue: #1E90FF;
     --progress-red: #E11D48;
     --progress-gray: #f3f4f6;
+    --gray-300:#cfd4dc;
   }
   * { box-sizing: border-box; }
   body { font-family: system-ui, Arial, sans-serif; background:#F9FAFB; color:#111; margin:0; }
   .container { width:100%; margin:0; padding:24px var(--pad); }
-
   h1 { font-size:20pt; margin:0 0 8px 0; line-height:1.2; }
   .subheader { font-size:18pt; margin:0 0 12px 0; font-weight:500; }
   h2 { font-size:14pt; margin:22px 0 8px 0; line-height:1.25; }
+  .intro { font-size:10pt; color:#333; margin:4px 0 14px 0; }
 
-  /* Header progress bar (7 dots across all pages) */
+  /* header progress bar: 7 dots across all pages */
   .progress { display:flex; gap:10px; margin:6px 0 16px 0; }
   .dot { width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb; }
   .dot.active { background: var(--progress-red); border-color: var(--progress-red); }
 
-  /* Grid rows so inputs reach right border (20px padding) */
+  /* grid rows so fields reach right edge (20px padding) */
   .row {
     display: grid;
     grid-template-columns: var(--label-w) 1fr;
@@ -40,12 +42,12 @@
     width: 100%;
     padding: 10px 12px;
     font-size: 10pt;
-    border: 1px solid #cfd4dc;
+    border: 1px solid var(--gray-300);
     border-radius: 10px;
     background: #fff;
     transition: box-shadow .15s, border-color .15s, background-color .15s;
   }
-  /* Blue background on focus for BOTH input and select */
+  /* blue bg on focus for both input and select */
   .row > input:focus,
   .row > select:focus {
     outline: none;
@@ -55,35 +57,33 @@
   }
   select:invalid { color:#aaa; }
 
-  .intro { font-size:10pt; color:#333; margin:4px 0 14px 0; }
-
-  /* Buttons */
+  /* actions / buttons */
   .actions { padding-left: calc(var(--label-w) + var(--gap)); margin-top: 14px; display:flex; gap:10px; justify-content: flex-end; }
-  button {
-    padding: 12px 18px;
-    border: none;
-    border-radius: 12px;
-    background: var(--brand-blue);
-    color: #fff;
-    font-size: 12pt;
-    cursor: pointer;
-  }
-  .btn-secondary { background:#fff; color:#111; border:1px solid #cfd4dc; }
+  button { padding: 12px 18px; border: none; border-radius: 12px; background: var(--brand-blue); color: #fff; font-size: 12pt; cursor: pointer; }
+  .btn-secondary { background:#fff; color:#111; border:1px solid var(--gray-300); }
 
-  /* Question block formatting (restored) */
+  /* question block */
   .q-item { padding:12px 0; border-top:1px solid #ddd; }
   .q-item > div:first-child { font-size: 11pt; margin-bottom: 6px; }
   .q-item em { font-size: 10pt; color: #444; display:block; margin-bottom:6px; }
-  .pill { display:inline-block; width:32px; height:32px; line-height:32px;
-          text-align:center; border:1px solid #ccc; border-radius:50%; margin-right:6px;
-          cursor:pointer; user-select:none; }
+  .pill { display:inline-block; width:32px; height:32px; line-height:32px; text-align:center; border:1px solid #ccc; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; }
   .pill.selected { background: var(--brand-blue); color:#fff; }
 
-  /* Mobile fallback */
+  /* ===== instruction page (restore style with round blue circles) ===== */
+  .scale-list { list-style:none; padding:0; margin:10px 0; }
+  .scale-item { display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt; }
+  .badge { width:28px; height:28px; border-radius:50%; background: var(--brand-blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700; }
+  .instructions-box { font-size:12pt; color:#222; line-height:1.5; margin-bottom:12px; }
+
+  /* mobile fallback */
   @media (max-width: 340px) {
     .row { grid-template-columns: 1fr; row-gap: 6px; }
     .actions { padding-left: 0; }
   }
+
+  /* ====== DO NOT EDIT: Welcome page lock markers ====== */
+  /* Keeping selectors specific so other edits won't affect #welcome */
+  #welcome .row > input, #welcome .row > select { border-color: var(--gray-300); }
 </style>
 <script id="embeddedQuestions" type="application/json">[
   {
@@ -273,7 +273,7 @@
       <span class="dot"></span>
     </div>
 
-    <!-- PAGE 1: Welcome form -->
+    <!-- ===== PAGE 1: Welcome form (locked) ===== -->
     <section id="welcome">
       <h2>Your Information</h2>
       <div class="row"><label for="nick">your name</label><input id="nick"></div>
@@ -311,24 +311,26 @@
       </div>
     </section>
 
-    <!-- PAGE 2: Instructions with 1–5 scoring explanations (restored) -->
+    <!-- ===== PAGE 2: Instructions (restored with blue circles 1–5) ===== -->
     <section id="instructions" style="display:none">
-      <h2>How scoring works</h2>
-      <p class="intro">Please read before you answer the statements.</p>
-      <div style="font-size:10pt; line-height:1.4; border:1px solid #e5e7eb; border-radius:10px; padding:12px;">
-        <p><strong>1 — Strongly Disagree</strong>: This is not true for me in most situations.</p>
-        <p><strong>2 — Disagree</strong>: This is usually not true for me.</p>
-        <p><strong>3 — Neutral</strong>: Sometimes true, sometimes not sure.</p>
-        <p><strong>4 — Agree</strong>: This is mostly true for me.</p>
-        <p><strong>5 — Strongly Agree</strong>: This is true for me almost all the time.</p>
-      </div>
+      <h2>Before you start</h2>
+      <p class="instructions-box">
+        Self-assessment helps your personal growth and development. Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities.
+      </p>
+      <ul class="scale-list">
+        <li class="scale-item"><span class="badge">1</span> <span>I'm not good at this</span></li>
+        <li class="scale-item"><span class="badge">2</span> <span>I can do better in this</span></li>
+        <li class="scale-item"><span class="badge">3</span> <span>I'm good at this</span></li>
+        <li class="scale-item"><span class="badge">4</span> <span>I'm great at this</span></li>
+        <li class="scale-item"><span class="badge">5</span> <span>I'm excellent at this</span></li>
+      </ul>
       <div class="actions">
         <button class="btn-secondary" id="backToWelcome">Back</button>
-        <button id="toQ1">Start Questions</button>
+        <button id="toQ1">Start</button>
       </div>
     </section>
 
-    <!-- PAGE 3: Question page 1 (restored) -->
+    <!-- ===== PAGE 3: Questions Part 1 ===== -->
     <section id="q1" style="display:none">
       <h2>Statements Part 1</h2>
       <div id="list-q1"></div>
@@ -338,7 +340,7 @@
       </div>
     </section>
 
-    <!-- PAGE 4: Question page 2 (restored) -->
+    <!-- ===== PAGE 4: Questions Part 2 ===== -->
     <section id="q2" style="display:none">
       <h2>Statements Part 2</h2>
       <div id="list-q2"></div>
@@ -348,7 +350,7 @@
       </div>
     </section>
 
-    <!-- PAGE 5: Finish placeholder (no popup yet) -->
+    <!-- ===== PAGE 5: Finish placeholder ===== -->
     <section id="finish" style="display:none">
       <h2>Completed</h2>
       <p class="intro">Thank you. We will add the confirmation popup next.</p>
@@ -383,7 +385,7 @@
     const dots = document.querySelectorAll('#progressHeader .dot');
     dots.forEach((d,i)=>d.classList.toggle('active', i < n));
   }
-  setProgress(1); // initial
+  setProgress(1);
 
   function makeQ(q,ord){
     const d = document.createElement('div');
@@ -405,7 +407,7 @@
     return d;
   }
 
-  // Wire buttons
+  // navigation
   el('toInstructions').onclick = () => show('instructions');
   el('backToWelcome').onclick = () => show('welcome');
   el('toQ1').onclick = () => {
